Changed absolute path

--- a/.gitignore
+++ b/.gitignore
@@ -495,3 +495,4 @@ Python/keyboard.png
 Python/save_model/eng2jp_weights.bytes
 Unity/Eng2Jp/Weights/baked-eng2jp.asset
 Unity/Eng2Jp/Weights/eng2jp_weights.bytes
+C++/eng2jp_weights.bytes
